--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_comisiones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_comisiones.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="c79f703b-bf01-4865-bd2b-701eb356ba3a">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="218"/>
-	<property name="ireport.y" value="18"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -20,7 +20,7 @@
 	</parameter>
 	<queryString>
 		<![CDATA[SELECT e.NOMBREEMPLEADO, p.nombrepuesto, c.numeroacuerdocomision, c.nombrecomision, c.fechadesdecomision, c.fechahastacomision FROM miembroscomision m inner join comision c on m.codigocomision
-= c.codigocomision inner join empleado e on m.CODIGOEMPLEADO=e.CODIGOEMPLEADO inner join puesto p on p.codigopuesto=e.codigopuesto where c.fechadesdecomision>=$P{FECHAINICIO} and c.fechahastacomision<=$P{FECHAFIN} ]]>
+= c.codigocomision inner join empleado e on m.CODIGOEMPLEADO=e.CODIGOEMPLEADO inner join puesto p on p.codigopuesto=e.codigopuesto where c.fechadesdecomision>=$P{FECHAINICIO} and c.fechahastacomision<=$P{FECHAFIN}]]>
 	</queryString>
 	<field name="NOMBREEMPLEADO" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
@@ -44,245 +44,217 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="79" splitType="Stretch">
-			<staticText>
-				<reportElement uuid="ff276982-a8e2-4630-862b-199b523e2b30" x="325" y="37" width="148" height="20"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<text><![CDATA[Direccion de Recursos Humanos]]></text>
-			</staticText>
-			<staticText>
-				<reportElement uuid="18a5c2ea-07e8-4059-bb1d-26a112f366be" x="296" y="22" width="211" height="20"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<text><![CDATA[Ministerio de Justicia  y Segurdiad Pública]]></text>
-			</staticText>
-			<staticText>
-				<reportElement uuid="7048bb48-5bd3-4523-954e-6d75beaee769" x="354" y="53" width="66" height="20"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<text><![CDATA[SISASMRH]]></text>
-			</staticText>
-			<image>
-				<reportElement uuid="d5244a04-208d-4ef9-bc04-8c758f3c1f28" x="29" y="22" width="212" height="38"/>
-				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
-			</image>
-			<image>
-				<reportElement uuid="757880b3-ddc9-4fcd-9ec0-2b4cae2e48bb" x="601" y="22" width="167" height="52"/>
-				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
-			</image>
-		</band>
+		<band height="6" splitType="Stretch"/>
 	</title>
 	<pageHeader>
-		<band height="54" splitType="Stretch">
+		<band height="106" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="d2820ed1-563c-4556-97e7-7f9324cc9b90" x="336" y="2" width="137" height="20"/>
+				<reportElement x="336" y="56" width="102" height="17" uuid="d2820ed1-563c-4556-97e7-7f9324cc9b90"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Reporte de Comisiones]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement uuid="04e4df16-4b67-4340-8a24-945fe1331771" x="695" y="3" width="100" height="14"/>
+				<reportElement x="695" y="57" width="100" height="14" uuid="04e4df16-4b67-4340-8a24-945fe1331771"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="c42b5a94-d56f-415b-9967-63beca281b2d" x="649" y="15" width="61" height="20"/>
+				<reportElement x="649" y="69" width="61" height="17" uuid="c42b5a94-d56f-415b-9967-63beca281b2d"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement uuid="0079daa6-1363-4574-a3cf-8cb78dec494e" x="718" y="15" width="35" height="20"/>
+				<reportElement x="718" y="69" width="35" height="17" uuid="0079daa6-1363-4574-a3cf-8cb78dec494e"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="46e35f03-e614-451b-9ee7-b3d1e73cdf93" x="214" y="21" width="38" height="20"/>
+				<reportElement x="230" y="75" width="38" height="17" uuid="46e35f03-e614-451b-9ee7-b3d1e73cdf93"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="3e1a0d6d-d4bc-49c7-be68-31d48017ee8f" x="400" y="24" width="35" height="20"/>
+				<reportElement x="401" y="78" width="35" height="17" uuid="3e1a0d6d-d4bc-49c7-be68-31d48017ee8f"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="fe98f365-d451-4cbf-8c21-ba4984bac98e" x="253" y="21" width="100" height="20"/>
+				<reportElement x="270" y="75" width="100" height="17" uuid="fe98f365-d451-4cbf-8c21-ba4984bac98e"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="689ef65a-c28c-4309-a567-86b3627c4c96" x="438" y="24" width="100" height="20"/>
+				<reportElement x="438" y="78" width="100" height="17" uuid="689ef65a-c28c-4309-a567-86b3627c4c96"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="389c1719-9f3d-441e-9550-b92970e4a3f4" x="17" y="24" width="100" height="20"/>
+				<reportElement x="17" y="78" width="100" height="17" uuid="389c1719-9f3d-441e-9550-b92970e4a3f4"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[rpt_reporte_comit]]></text>
+				<text><![CDATA[rpt_reporte_comis]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="8f4080e8-dbe2-4b30-9f43-82f8fbabddf6" x="657" y="30" width="44" height="20"/>
+				<reportElement x="657" y="84" width="44" height="17" uuid="8f4080e8-dbe2-4b30-9f43-82f8fbabddf6"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="c2464fff-bc9f-4c3b-a4aa-56a405eea00c" x="705" y="30" width="81" height="20"/>
+				<reportElement x="705" y="84" width="81" height="17" uuid="c2464fff-bc9f-4c3b-a4aa-56a405eea00c"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="56b210b9-a783-49f8-9ce4-5ab259f720b2" x="657" y="3" width="38" height="14"/>
+				<reportElement x="657" y="57" width="38" height="17" uuid="56b210b9-a783-49f8-9ce4-5ab259f720b2"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha:]]></text>
 			</staticText>
+			<image>
+				<reportElement x="657" y="4" width="167" height="52" uuid="757880b3-ddc9-4fcd-9ec0-2b4cae2e48bb"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
+			</image>
+			<image>
+				<reportElement x="17" y="4" width="212" height="52" uuid="d5244a04-208d-4ef9-bc04-8c758f3c1f28"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
+			</image>
+			<staticText>
+				<reportElement x="325" y="19" width="148" height="17" uuid="ff276982-a8e2-4630-862b-199b523e2b30"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[Direccion de Recursos Humanos]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="296" y="4" width="211" height="17" uuid="18a5c2ea-07e8-4059-bb1d-26a112f366be"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[Ministerio de Justicia  y Segurdiad Pública]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="354" y="35" width="66" height="17" uuid="7048bb48-5bd3-4523-954e-6d75beaee769"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[SISASMRH]]></text>
+			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="52" splitType="Stretch">
+		<band height="24" splitType="Stretch">
 			<rectangle>
-				<reportElement uuid="47f87b1b-4db2-4d10-b77e-5c9c9f4a3b62" x="3" y="13" width="792" height="34" backcolor="#FFFFFF"/>
+				<reportElement x="3" y="3" width="792" height="17" backcolor="#FFFFFF" uuid="47f87b1b-4db2-4d10-b77e-5c9c9f4a3b62"/>
 			</rectangle>
 			<line>
-				<reportElement uuid="c4fcf880-abce-49ec-a547-3b2558cd2771" x="142" y="17" width="1" height="20"/>
+				<reportElement x="142" y="3" width="1" height="17" uuid="c4fcf880-abce-49ec-a547-3b2558cd2771"/>
 			</line>
 			<line>
-				<reportElement uuid="153ccd9d-3432-4044-af05-7acaf3001689" x="267" y="17" width="1" height="20"/>
+				<reportElement x="267" y="4" width="1" height="17" uuid="153ccd9d-3432-4044-af05-7acaf3001689"/>
 			</line>
 			<line>
-				<reportElement uuid="2ef89dec-32c8-43ba-bcc8-d530435c6442" x="550" y="17" width="1" height="20"/>
+				<reportElement x="550" y="3" width="1" height="17" uuid="2ef89dec-32c8-43ba-bcc8-d530435c6442"/>
 			</line>
 			<line>
-				<reportElement uuid="b5d44edf-3426-41f0-9b37-45a17f1b4910" x="406" y="16" width="1" height="20"/>
+				<reportElement x="406" y="3" width="1" height="17" uuid="b5d44edf-3426-41f0-9b37-45a17f1b4910"/>
 			</line>
 			<line>
-				<reportElement uuid="cb4a9ca7-80cc-43ff-9384-040b1a0436bc" x="661" y="17" width="1" height="20"/>
+				<reportElement x="661" y="3" width="1" height="17" uuid="cb4a9ca7-80cc-43ff-9384-040b1a0436bc"/>
 			</line>
 			<staticText>
-				<reportElement uuid="6ab1151a-ae84-412a-b61e-72678569fd12" x="10" y="21" width="130" height="20"/>
-				<textElement/>
+				<reportElement x="10" y="6" width="130" height="17" uuid="6ab1151a-ae84-412a-b61e-72678569fd12"/>
 				<text><![CDATA[NOMBRE DE EMPLEADO]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="5cca373e-9f60-4349-a446-c23989898cf3" x="148" y="23" width="114" height="20"/>
-				<textElement/>
+				<reportElement x="148" y="7" width="114" height="17" uuid="5cca373e-9f60-4349-a446-c23989898cf3"/>
 				<text><![CDATA[NOMBRE DE PUESTO]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="150a34f2-940f-4d60-9db3-372e87ffbdeb" x="275" y="17" width="125" height="30"/>
-				<textElement/>
+				<reportElement x="275" y="7" width="125" height="17" uuid="150a34f2-940f-4d60-9db3-372e87ffbdeb"/>
 				<text><![CDATA[NUMERO DE ACUERDO DE COMISION]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="9d8f772b-de5d-400d-9d80-f9c30e782a3a" x="413" y="17" width="130" height="20"/>
-				<textElement/>
+				<reportElement x="413" y="7" width="130" height="17" uuid="9d8f772b-de5d-400d-9d80-f9c30e782a3a"/>
 				<text><![CDATA[NOMBRE DE COMISION]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="74c7a8b2-df0d-44b1-9da7-6ea69c97576a" x="551" y="17" width="106" height="26"/>
-				<textElement/>
+				<reportElement x="551" y="7" width="106" height="17" uuid="74c7a8b2-df0d-44b1-9da7-6ea69c97576a"/>
 				<text><![CDATA[FECHA DE INICIO DE COMISION]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="3f6adb7e-4a80-402e-9e61-502b038d8bb1" x="664" y="17" width="131" height="24"/>
-				<textElement/>
+				<reportElement x="664" y="7" width="131" height="17" uuid="3f6adb7e-4a80-402e-9e61-502b038d8bb1"/>
 				<text><![CDATA[FECHA DE FINALIZACION DE COMISION]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="25" splitType="Stretch">
+		<band height="21" splitType="Stretch">
 			<textField>
-				<reportElement uuid="30b89460-ad7b-46e8-9ef6-b46b01b4fd9f" x="5" y="5" width="135" height="20"/>
-				<textElement/>
+				<reportElement x="5" y="5" width="135" height="14" uuid="30b89460-ad7b-46e8-9ef6-b46b01b4fd9f"/>
 				<textFieldExpression><![CDATA[$F{NOMBREEMPLEADO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="cbaf9226-9647-4fef-ace5-c0de6da336e7" x="145" y="4" width="117" height="20"/>
-				<textElement/>
+				<reportElement x="145" y="4" width="117" height="14" uuid="cbaf9226-9647-4fef-ace5-c0de6da336e7"/>
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="e7c90728-7e99-444f-809a-ae0cb3efed34" x="275" y="5" width="125" height="20"/>
-				<textElement/>
+				<reportElement x="275" y="5" width="125" height="14" uuid="e7c90728-7e99-444f-809a-ae0cb3efed34"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{numeroacuerdocomision}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="7a135b71-4e64-425d-bcf4-324504231935" x="407" y="5" width="131" height="20"/>
-				<textElement/>
+				<reportElement x="407" y="5" width="131" height="14" uuid="7a135b71-4e64-425d-bcf4-324504231935"/>
 				<textFieldExpression><![CDATA[$F{nombrecomision}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="69c5818e-1468-4137-9485-49df981328d2" x="557" y="5" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="557" y="5" width="100" height="14" uuid="69c5818e-1468-4137-9485-49df981328d2"/>
+				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA[$F{fechadesdecomision}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="ec412bff-41bb-4250-b244-d7273d757e87" x="686" y="5" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="686" y="5" width="100" height="14" uuid="ec412bff-41bb-4250-b244-d7273d757e87"/>
+				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA[$F{fechahastacomision}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="45" splitType="Stretch">
-			<line>
-				<reportElement uuid="93ec930f-20ed-4bf3-bdb8-4b4c946d7e95" x="5" y="5" width="763" height="1"/>
-			</line>
-			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement uuid="d6e8039f-e0be-4d17-98f6-ed8f444238dc" mode="Opaque" x="10" y="14" width="555" height="13" backcolor="#FFFFFF"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9" isUnderline="false"/>
-				</textElement>
-				<textFieldExpression><![CDATA["Total de Registros:    " + $V{COLUMN_COUNT}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement uuid="f6043e38-7526-4173-9344-5d47c7ab2b65" x="641" y="16" width="80" height="20"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
-			</textField>
-			<textField evaluationTime="Report">
-				<reportElement uuid="aeb53526-31df-4292-b467-e2c3de70eff0" x="721" y="16" width="40" height="20"/>
-				<textElement/>
-				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
-		</band>
+		<band height="45" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
 		<band height="54" splitType="Stretch">
-			<staticText>
-				<reportElement uuid="6de3c10d-b33a-4540-8323-863022d0ddd8" x="324" y="16" width="183" height="20"/>
+			<textField isStretchWithOverflow="true" pattern="###0">
+				<reportElement mode="Opaque" x="591" y="16" width="204" height="13" backcolor="#FFFFFF" uuid="d6e8039f-e0be-4d17-98f6-ed8f444238dc"/>
 				<textElement>
-					<font fontName="Times New Roman" size="9"/>
+					<font fontName="Times New Roman" size="9" isUnderline="false"/>
 				</textElement>
-				<text><![CDATA[Derechos Reservados UES/FIA/EISI]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA["Total de Registros:    " + $V{REPORT_COUNT}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="3" y="15" width="797" height="1" uuid="93ec930f-20ed-4bf3-bdb8-4b4c946d7e95"/>
+			</line>
 		</band>
 	</pageFooter>
 	<summary>
