--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciasalariales.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciasalariales.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="c3d8ea19-1295-4cd5-beff-28727f321760">
-	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="2"/>
+	<property name="ireport.zoom" value="2.1435888100000016"/>
+	<property name="ireport.x" value="18"/>
+	<property name="ireport.y" value="75"/>
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[1]]></defaultValueExpression>
 	</parameter>
@@ -57,122 +57,127 @@ c.fechafincontrato <= $P{FECHAFIN}]]>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="98" splitType="Stretch">
-			<staticText>
-				<reportElement x="145" y="20" width="282" height="20" uuid="92646f55-b86a-406f-b483-3937bdd29a9a"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Times New Roman" size="9" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Ministerio de Justicia y Seguridad Publica]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="209" y="56" width="129" height="20" uuid="598b059c-c836-4d9a-9f00-aa02191a6297"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Times New Roman" size="9" isBold="true"/>
-				</textElement>
-				<text><![CDATA[SISADMRH]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="161" y="38" width="240" height="20" uuid="ff0ff36a-d21b-48a0-8a36-d2f2e3e11abd"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Times New Roman" size="9" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Dirección de Recursos Humanos]]></text>
-			</staticText>
-			<image>
-				<reportElement x="20" y="10" width="142" height="65" uuid="4480b97a-a6d9-4922-94b3-9c34571a3f54"/>
-				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
-			</image>
-			<image>
-				<reportElement x="409" y="5" width="154" height="65" uuid="a1d1dd88-a053-4585-aa7f-9f0eceb800c9"/>
-				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
-			</image>
-		</band>
+		<band height="4" splitType="Stretch"/>
 	</title>
 	<pageHeader>
-		<band height="79" splitType="Stretch">
+		<band height="136" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="8" width="572" height="20" uuid="ce3f3878-6d02-4709-a00e-5a40b03d9145"/>
+				<reportElement x="140" y="73" width="292" height="17" uuid="ce3f3878-6d02-4709-a00e-5a40b03d9145"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Constancia Salarial]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="426" y="35" width="64" height="20" uuid="1c634514-dc50-40e0-bce0-51abeda387cb"/>
+				<reportElement x="423" y="101" width="64" height="17" uuid="1c634514-dc50-40e0-bce0-51abeda387cb"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="490" y="35" width="40" height="20" uuid="07d33278-4802-4c35-87d1-e03ac665e740"/>
+				<reportElement x="487" y="100" width="40" height="17" uuid="07d33278-4802-4c35-87d1-e03ac665e740"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="470" y="12" width="100" height="20" uuid="1d302d02-d934-453e-8f10-74156b845839"/>
+				<reportElement x="470" y="84" width="100" height="17" uuid="1d302d02-d934-453e-8f10-74156b845839"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="432" y="12" width="35" height="20" uuid="88e9db8a-3a8b-4174-91e8-ad4201c9bf97"/>
+				<reportElement x="441" y="84" width="30" height="17" uuid="88e9db8a-3a8b-4174-91e8-ad4201c9bf97"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="147" y="31" width="29" height="20" uuid="2a809ba7-8a89-4d40-81ff-a2d55dd8ad25"/>
+				<reportElement x="161" y="90" width="30" height="17" uuid="2a809ba7-8a89-4d40-81ff-a2d55dd8ad25"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="306" y="32" width="31" height="20" uuid="b0cf2130-63f4-45e8-9c29-55570e8b5584"/>
+				<reportElement x="315" y="91" width="30" height="17" uuid="b0cf2130-63f4-45e8-9c29-55570e8b5584"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="183" y="32" width="100" height="20" uuid="cec00a1a-473f-4dee-a80c-21eb6d7f70ac"/>
+				<reportElement x="191" y="91" width="100" height="17" uuid="cec00a1a-473f-4dee-a80c-21eb6d7f70ac"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="338" y="32" width="100" height="20" uuid="7a7b72cb-e892-4d64-b4e5-84f70380a4fd"/>
+				<reportElement x="343" y="91" width="88" height="17" uuid="7a7b72cb-e892-4d64-b4e5-84f70380a4fd"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="19" y="14" width="100" height="20" uuid="1d7ad94a-214c-4e90-b6eb-4b830f604906"/>
+				<reportElement x="19" y="90" width="100" height="17" uuid="1d7ad94a-214c-4e90-b6eb-4b830f604906"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[rpt_reporte_csal]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="431" y="57" width="42" height="20" uuid="4b109aed-7271-45d4-b9b1-0227aad37ce0"/>
+				<reportElement x="441" y="117" width="42" height="17" uuid="4b109aed-7271-45d4-b9b1-0227aad37ce0"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="472" y="57" width="94" height="20" uuid="78ebf8b9-c5d6-49c2-84f5-a9947748e4be"/>
+				<reportElement x="482" y="117" width="94" height="17" uuid="78ebf8b9-c5d6-49c2-84f5-a9947748e4be"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
+			<image>
+				<reportElement x="19" y="13" width="142" height="65" uuid="4480b97a-a6d9-4922-94b3-9c34571a3f54"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
+			</image>
+			<image>
+				<reportElement x="441" y="13" width="154" height="65" uuid="a1d1dd88-a053-4585-aa7f-9f0eceb800c9"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
+			</image>
+			<staticText>
+				<reportElement x="219" y="50" width="129" height="17" uuid="598b059c-c836-4d9a-9f00-aa02191a6297"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Times New Roman" size="9" isBold="true"/>
+				</textElement>
+				<text><![CDATA[SISADMRH]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="205" y="34" width="172" height="17" uuid="ff0ff36a-d21b-48a0-8a36-d2f2e3e11abd"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Times New Roman" size="9" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Dirección de Recursos Humanos]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="168" y="18" width="233" height="17" uuid="92646f55-b86a-406f-b483-3937bdd29a9a"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Times New Roman" size="9" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Ministerio de Justicia y Seguridad Publica]]></text>
+			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="24" splitType="Stretch"/>
+		<band height="6" splitType="Stretch"/>
 	</columnHeader>
 	<detail>
 		<band height="352" splitType="Stretch">
@@ -259,14 +264,6 @@ c.fechafincontrato <= $P{FECHAFIN}]]>
 		<band height="27" splitType="Stretch"/>
 	</columnFooter>
 	<summary>
-		<band height="42" splitType="Stretch">
-			<staticText>
-				<reportElement x="178" y="3" width="199" height="20" uuid="a904b1d4-d690-45ac-8066-9b4ccd020c67"/>
-				<textElement>
-					<font size="9"/>
-				</textElement>
-				<text><![CDATA[Derechos Reservados  UES/FIA/ESISI]]></text>
-			</staticText>
-		</band>
+		<band height="42" splitType="Stretch"/>
 	</summary>
 </jasperReport>
