--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciaservicios.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciaservicios.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="61040501-82b0-436f-934f-a899fdfcb57e">
-	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.zoom" value="1.2100000000000009"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="26"/>
+	<property name="ireport.y" value="271"/>
 	<parameter name="FECHAINICIO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -51,124 +51,123 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="82" splitType="Stretch">
-			<staticText>
-				<reportElement x="171" y="5" width="213" height="20" uuid="e0dac18e-05c1-4ee9-bd53-d4213a544e47"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<text><![CDATA[Ministerio de Justicia y Seguridad Pública]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="171" y="27" width="213" height="20" uuid="04cbd8d9-60f2-4ecb-a1a9-84f960a22072"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<text><![CDATA[Direccion de Recursos Humanos]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="238" y="50" width="78" height="20" uuid="a45415b3-b736-45f3-9ec7-91c71d0ca0fc"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<text><![CDATA[SISADMRH]]></text>
-			</staticText>
-			<image>
-				<reportElement x="20" y="10" width="142" height="65" uuid="4480b97a-a6d9-4922-94b3-9c34571a3f54"/>
-				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
-			</image>
-			<image>
-				<reportElement x="397" y="5" width="154" height="65" uuid="a1d1dd88-a053-4585-aa7f-9f0eceb800c9"/>
-				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
-			</image>
-		</band>
+		<band height="6" splitType="Stretch"/>
 	</title>
 	<pageHeader>
-		<band height="77" splitType="Stretch">
+		<band height="138" splitType="Stretch">
 			<staticText>
-				<reportElement x="188" y="7" width="145" height="20" uuid="4333c6f1-4487-4efe-ab58-6bd134eb0777"/>
+				<reportElement x="188" y="88" width="145" height="17" uuid="4333c6f1-4487-4efe-ab58-6bd134eb0777"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Constancia de Tiempo de Servicios]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="459" y="5" width="99" height="20" uuid="5a449a22-2142-476b-807a-f6013bc9c602"/>
+				<reportElement x="459" y="84" width="99" height="20" uuid="5a449a22-2142-476b-807a-f6013bc9c602"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="111" y="28" width="42" height="20" uuid="244ca124-ff83-4f3d-ba32-3c3bc5d68fcf"/>
+				<reportElement x="123" y="107" width="30" height="17" uuid="244ca124-ff83-4f3d-ba32-3c3bc5d68fcf"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="289" y="28" width="32" height="20" uuid="5f9b6fea-0c6e-4a06-8f92-5aaf4dcc1753"/>
+				<reportElement x="292" y="109" width="32" height="20" uuid="5f9b6fea-0c6e-4a06-8f92-5aaf4dcc1753"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="155" y="28" width="100" height="20" uuid="8e6536ec-e9b9-4f5b-93be-086c61db0435"/>
+				<reportElement x="155" y="107" width="100" height="17" uuid="8e6536ec-e9b9-4f5b-93be-086c61db0435"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="324" y="28" width="76" height="20" uuid="2cd14b2a-8134-4ba7-ba68-e54703e0e432"/>
+				<reportElement x="324" y="107" width="76" height="20" uuid="2cd14b2a-8134-4ba7-ba68-e54703e0e432"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="17" y="4" width="100" height="20" uuid="29f14a98-f2d5-4972-bf65-e21b426580e0"/>
+				<reportElement x="11" y="105" width="100" height="17" uuid="29f14a98-f2d5-4972-bf65-e21b426580e0"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[rpt_reporte_ctis]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="418" y="5" width="41" height="20" uuid="1266be68-748d-4689-b696-05c1a2e3a79d"/>
+				<reportElement x="429" y="84" width="30" height="17" uuid="1266be68-748d-4689-b696-05c1a2e3a79d"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="387" y="19" width="80" height="20" uuid="0fbdba6b-6870-489f-bee0-804927899f3f"/>
+				<reportElement x="394" y="98" width="80" height="17" uuid="0fbdba6b-6870-489f-bee0-804927899f3f"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="467" y="19" width="40" height="20" uuid="d3156da3-544c-475d-a0be-4d16e41a79c5"/>
+				<reportElement x="474" y="98" width="40" height="17" uuid="d3156da3-544c-475d-a0be-4d16e41a79c5"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="421" y="35" width="42" height="20" uuid="6171b9b9-ccd2-4e3b-ab3c-3dc5d1675bfa"/>
+				<reportElement x="429" y="114" width="30" height="17" uuid="6171b9b9-ccd2-4e3b-ab3c-3dc5d1675bfa"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="463" y="35" width="78" height="20" uuid="71bd78fd-61fb-4320-aa55-edff8662ed10"/>
+				<reportElement x="461" y="114" width="78" height="17" uuid="71bd78fd-61fb-4320-aa55-edff8662ed10"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
+			<image>
+				<reportElement x="11" y="16" width="142" height="65" uuid="4480b97a-a6d9-4922-94b3-9c34571a3f54"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
+			</image>
+			<image>
+				<reportElement x="418" y="16" width="154" height="65" uuid="a1d1dd88-a053-4585-aa7f-9f0eceb800c9"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
+			</image>
+			<staticText>
+				<reportElement x="223" y="56" width="78" height="17" uuid="a45415b3-b736-45f3-9ec7-91c71d0ca0fc"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[SISADMRH]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="188" y="36" width="150" height="17" uuid="04cbd8d9-60f2-4ecb-a1a9-84f960a22072"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[Direccion de Recursos Humanos]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="174" y="16" width="188" height="17" uuid="e0dac18e-05c1-4ee9-bd53-d4213a544e47"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[Ministerio de Justicia y Seguridad Pública]]></text>
+			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
@@ -211,15 +210,7 @@
 		<band height="45" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="54" splitType="Stretch">
-			<staticText>
-				<reportElement x="162" y="19" width="214" height="20" uuid="435773dd-08e1-4f2a-b3d9-7efbbdf6946d"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<text><![CDATA[Derechos Reservados UES/FIA/EISI]]></text>
-			</staticText>
-		</band>
+		<band height="54" splitType="Stretch"/>
 	</pageFooter>
 	<summary>
 		<band height="42" splitType="Stretch"/>
